# find-x

./: .gitignore  README.md  pyproject.toml
src/find-x/core/: models.py
src/find_x/: __init__.py  cli.py
src/find_x/core/: chunker.py  embedder.py  models.py  ranking.py  scanner.py  search.py
src/find_x/parsers/: __init__.py  line_based.py
src/find_x/storage/: base.py
tests/: conftest.py
tests/fixtures/sample_repo/: README.md  large_module.py  small_module.py
tests/fixtures/sample_repo/__pycache__/: ignored.py
tests/fixtures/sample_repo/pkg/: __init__.py  nested.py
tests/integration/: test_search.py
tests/unit/: test_chunker.py  test_cli.py  test_embedder.py  test_models.py  test_scanner.py  test_storage_base.py
