[project]
name = "find-x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eschxr", email = "46295107+Eschxr@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
find-x = "find_x:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
