[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "find_x"
dynamic = ["version"]
description = "Query repositories using natural language, without LLM-dependence."
readme = "README.md"
authors = [
    { name = "Eschxr", email = "46295107+Eschxr@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
	"typer>=0.12",
	"rich>=13.0",
	"sentence-transformers>=3.0",
	"numpy>=1.26",
	"pydantic>=2.13.4",
]

[project.scripts]
find_x = "find_x.cli:app"

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.8"]
web = ["fastapi", "uvicorn"]
treesitter = ["tree-sitter", "tree-sitter-languages"]

[dependency-groups]
dev = [
	"pytest>=8.0",
	"pytest-cov",
	"ruff",
	"mypy",
]

[tool.hatch.build.targets.sdist]
include = ["src/find_x", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/find_x"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=find_x --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/find_x"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
	"pragma: no cover",
	"if __name__ == .__main__.:",
]
